fix low contrast texts in Login page

--- a/web/html/src/branding/css/uyuni/login.less
+++ b/web/html/src/branding/css/uyuni/login.less
@@ -33,7 +33,7 @@ body.login-page {
     font-size: 32px
   }
   .btn-dark {
-    color: @green;
+    color: @green-light-1;
     border: 1px solid @green;
     display: inline-block;
     text-decoration: none;
@@ -109,7 +109,7 @@ body.login-page {
     position: fixed;
     padding-bottom: 1em;
     padding-left: 0;
-    color: @gray;
+    color: @gray-dark-2;
     div.wrapper {
       background-size: auto 35px;
       min-height: 35px;
